--- a/package.json
+++ b/package.json
@@ -32,13 +32,20 @@
     "@emotion/styled": "11.13.0",
     "@mui/material": "6.1.6",
     "@prisma/client": "5.4.2",
+    "axios": "1.7.7",
     "blitz": "2.1.3",
+    "browser-image-compression": "2.0.2",
+    "express": "4.21.1",
+    "formidable": "3.5.2",
     "formik": "2.4.6",
-    "next": "14.2.15",
+    "multer": "1.4.5-lts.1",
+    "next": "15.0.3",
     "prisma": "5.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "secure-password": "4.0.0",
+    "sweetalert2": "11.14.5",
+    "uuid": "11.0.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -46,6 +53,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "8.0.1",
+    "@types/formidable": "3.4.5",
     "@types/node": "18.11.9",
     "@types/preview-email": "2.0.1",
     "@types/react": "18.0.25",
