--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prisma": "5.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable-views": "0.14.0",
     "secure-password": "4.0.0",
     "sweetalert2": "11.14.5",
     "uuid": "11.0.2",
