--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # This env file should be checked into source control
 # This is the place for default values for all environments
 # Values in `.env.local` and `.env.production` will override these values
-DATABASE_URL="mysql://root:amaro@071318@localhost:3307/izeek"
+# DATABASE_URL="mysql://root:amaro@071318@localhost:3307/izeek"
+DATABASE_URL = "mongodb+srv://Amaro018:6DdVbcUVR9otcomk@cluster.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
